implement relaxed soundness check

--- a/lola2.html
+++ b/lola2.html
@@ -28,7 +28,7 @@
           <input type="checkbox" name="quasiliveness" id="quasiliveness"> <label for="quasiliveness">Quasiliveness</label>
         </p>
         <p>
-          <input type="checkbox" name="relaxed" id="relaxed"> <label for="relaxed">Relaxedness</label>
+          <input type="checkbox" name="relaxed_soundness" id="relaxed_soundness"> <label for="relaxed_soundness">Relaxed Soundness</label>
         </p>
         <p>
           <input type="checkbox" name="boundedness" id="boundedness"> <label for="boundedness">Boundeness</label>
