--- a/lola2.html
+++ b/lola2.html
@@ -1,60 +1,72 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>LoLA 2 as a service</title>
 
-<head><title>LoLA 2 as a service</title></head>
+    <!-- Bootstrap -->
+    <link href="bootstrap.min.css" rel="stylesheet">
+  </head>
+  <body>
 
-<body>
-    <h1>LoLA 2 as a service</h1>
+    <div class="container">
+      <h1>LoLA 2 as a service</h1>
 
-    <p>
-      <label for="file">Import pnml file</label>
-      <input type="file" id="file" name="files" />
-    </p>
+      <p>
+        <label for="file">Import pnml file</label>
+        <input type="file" id="file" name="files" />
+      </p>
 
-    <form action="lola2_new.php" method="POST">
-        <h2>Analysis</h2>
+      <form action="lola2_new.php" method="POST">
+          <h2>Analysis</h2>
 
-        <p>PNML Input:</p>
-        <p>
-            <textarea name="input" id="input" cols="50" rows="10"></textarea><br>
-        </p>
-        <p>Choices:</p>
-        <p>
-          <input type="checkbox" name="deadlocks" id="deadlocks"> <label for="deadlocks">Deadlocks</label>
-        </p>
-        <p>
-          <input type="checkbox" name="reversibility" id="reversibility"> <label for="reversibility">Reversibility</label>
-        </p>
-        <p>
-          <input type="checkbox" name="quasiliveness" id="quasiliveness"> <label for="quasiliveness">Quasiliveness</label>
-        </p>
-        <p>
-          <input type="checkbox" name="relaxed_soundness" id="relaxed_soundness"> <label for="relaxed_soundness">Relaxed Soundness</label>
-        </p>
-        <p>
-          <input type="checkbox" name="boundedness" id="boundedness"> <label for="boundedness">Boundeness</label>
-        </p>
-        <p>
-          <input type="checkbox" name="liveness" id="liveness"> <label for="liveness">Liveness</label>
-        </p>
+          <p>PNML Input:</p>
+          <p>
+              <textarea name="input" id="input" cols="50" rows="10"></textarea><br>
+          </p>
+          <p>Choices:</p>
+          <p>
+            <input type="checkbox" name="deadlocks" id="deadlocks"> <label for="deadlocks">Deadlocks</label>
+          </p>
+          <p>
+            <input type="checkbox" name="reversibility" id="reversibility"> <label for="reversibility">Reversibility</label>
+          </p>
+          <p>
+            <input type="checkbox" name="quasiliveness" id="quasiliveness"> <label for="quasiliveness">Quasiliveness</label>
+          </p>
+          <p>
+            <input type="checkbox" name="relaxed_soundness" id="relaxed_soundness"> <label for="relaxed_soundness">Relaxed Soundness</label>
+          </p>
+          <p>
+            <input type="checkbox" name="boundedness" id="boundedness"> <label for="boundedness">Boundeness</label>
+          </p>
+          <p>
+            <input type="checkbox" name="liveness" id="liveness"> <label for="liveness">Liveness</label>
+          </p>
 
-        <p>
-          <input type="checkbox" name="dead_transition" id="dead_transition"> <label for="dead_transition">is Dead Transition</label>
-          <input type="text" name="dead_transition_name" id="dead_transition_name" placeholder="Name of the Transition to check">
-        </p>
+          <p>
+            <input type="checkbox" name="dead_transition" id="dead_transition"> <label for="dead_transition">is Dead Transition</label>
+            <input type="text" name="dead_transition_name" id="dead_transition_name" placeholder="Name of the Transition to check">
+          </p>
 
-        <p>
-          <input type="checkbox" name="live_transition" id="live_transition"> <label for="live_transition">is Live Transition</label>
-          <input type="text" name="live_transition_name" id="live_transition_name" placeholder="Name of the Transition to check">
-        </p>
+          <p>
+            <input type="checkbox" name="live_transition" id="live_transition"> <label for="live_transition">is Live Transition</label>
+            <input type="text" name="live_transition_name" id="live_transition_name" placeholder="Name of the Transition to check">
+          </p>
 
-        <p>
-          <input type="checkbox" name="custom_formula" id="custom_formula"> <label for="custom_formula">Check custom formula</label>
-          <br />
-           <textarea name="custom_formula_content" cols"50" rows="5"></textarea><br>
-        </p>
+          <p>
+            <input type="checkbox" name="custom_formula" id="custom_formula"> <label for="custom_formula">Check custom formula</label>
+            <br />
+             <textarea name="custom_formula_content" cols"50" rows="5"></textarea><br>
+          </p>
 
-        <p><input type="submit" value=" Submit "><input type="reset" value=" Reset "></p>
-    </form>
+          <p><input type="submit" value=" Submit "><input type="reset" value=" Reset "></p>
+      </form>
+
+    </div>
 
     <!-- JS -->
     <script>
