implement soundness check

--- a/lola2.html
+++ b/lola2.html
@@ -38,6 +38,9 @@
             <input type="checkbox" name="quasiliveness" id="quasiliveness"> <label for="quasiliveness">Quasiliveness</label>
           </p>
           <p>
+            <input type="checkbox" name="soundness" id="soundness"> <label for="soundness">Soundness</label>
+          </p>
+          <p>
             <input type="checkbox" name="relaxed_soundness" id="relaxed_soundness"> <label for="relaxed_soundness">Relaxed Soundness</label>
           </p>
           <p>
