enable directly sending LOLA input

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h1>LoLA 2 as a service</h1>
 
       <p>
-        <label for="file">Import pnml file</label>
+        <label for="file">Import pnml / lola file</label>
         <input type="file" id="file" name="files" />
       </p>
 
       <form action="lola.php" method="POST">
           <h2>Analysis</h2>
 
-          <p>PNML Input:</p>
+          <p>PNML / LOLA Input:</p>
           <p>
               <textarea name="input" id="input" cols="50" rows="10"></textarea><br>
           </p>
